# gogo

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_workflow  README.md  application.yml  gogo.conf  gogo.py  pom.xml  substitute.conf
gogo-server/: .gitignore  Cargo.toml  Dockerfile  application.yml  config.json  pom.xml
gogo-server/.cargo/: config.toml
gogo-server/src/: config.rs  fetch.rs  main.rs  metric.rs  test.rs
gogo-server/src/main/java/zenuo/gogo/: GogoApplication.java
gogo-server/src/main/java/zenuo/gogo/core/: Handler.java  ResponseType.java  Server.java
gogo-server/src/main/java/zenuo/gogo/exception/: SearchException.java
gogo-server/src/main/java/zenuo/gogo/model/: Entry.java  IResponse.java  LintResponse.java  SearchResponse.java
gogo-server/src/main/java/zenuo/gogo/service/: ICacheService.java
gogo-server/src/main/java/zenuo/gogo/util/: GoogleDomainUtils.java  JsonUtils.java  StringUtils.java  UserAgentUtils.java
gogo-server/src/main/java/zenuo/gogo/web/: IIndexPageBuilder.java  IPageBuilder.java  IResultPageBuilder.java  IndexPageBuilder.java  ResultPageBuilder.java
gogo-server/src/main/resources/: application.yml  log4j2.xml  logback.xml
gogo-server/src/main/resources/web/: index.html
gogo-server/src/main/resources/web/static/: script.js
gogo-server/src/test/java/zenuo/gogo/: TestEnvironment.java
gogo-server/src/test/java/zenuo/gogo/model/: SearchResponseTest.java
gogo-server/test/suggest/: f.txt
gogo-server/test/webpage/: openssl - Google 搜索.html  rust list files - Google Search.html  测试 - Google Search.html
(+150 files in other folders)
