[package]
name = "gogo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.26.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["socks", "native-tls"] }
url = "2.3.1"
kuchiki = "0.8.1"
once_cell = "1.16.0"
clap = { version = "4.0", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3