[package]
name = "gogo-server"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "gogo-server"
path = "src/main.rs"

[dependencies]
pretty_env_logger = "0.4"
log = "0.4"
html5ever = "0.26.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["socks", "native-tls"] }
url = "2.3.1"
kuchiki = "0.8.1"
once_cell = "1.16.0"
clap = { version = "4.0", features = ["derive"] }
prometheus = {version = "0.13.3"}
rand = "0.8.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

